# seoulnow

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-vm.yml
airflow/: Dockerfile  dbt-requirements.txt  requirements.txt
airflow/dags/: .airflowignore  backfill_silver_from_bronze.py  dbt_full_run.py  iceberg_maintenance.py  slo_daily_report.py
airflow/dags/common/: callbacks.py  capture_metrics.py  slo_query.py  spark_submit.py
data/reference/: places_seed_sample.csv
dbt/seoul/: dbt_project.yml  profiles.yml.example
dbt/seoul/models/: sources.yml
dbt/seoul/tests/: assert_congest_level_valid.sql
docs/architecture/: data-flow.md  data_lineage.md
docs/governance/: external_data_tos.md
docs/portfolio/: phase1a_v1.md
docs/portfolio/troubleshooting/: 2026-05-01-lakekeeper-v05-setup.md  2026-05-02-day-2-producers-troubleshooting.md  2026-05-05-day-3-pre-entry.md  2026-05-07-day-3-task-3.4-silver-debug.md  2026-05-08-day-4-silver-fix-resolved.md  2026-05-09-day-4-tasks-4_1-4_3.md  2026-05-10-day-5-airflow-setup.md  2026-05-10-day-5-dbt-iceberg-compat.md  2026-05-11-day-6-airflow-cdc-integration.md  2026-05-11-day-7-nextjs-cloudflare-deploy.md  2026-05-11-day-7-streaming-smoke-timeout-restart.md  2026-05-12-day-8-archive.md  2026-05-12-day-8-cloudflare-deploy.md  2026-05-12-day-9-archive.md  2026-05-14-day-10-flink-mini-cluster-and-backfill.md  2026-05-14-day-10-pr-convention-regression.md  2026-05-14-day-10-slo-redesign-and-path-b.md  2026-05-21-day-11-prep-cloudflare-account-issues.md  2026-05-21-day-11-prep-oracle-cloud-issues.md  2026-05-21-day-11-prep-tunnel-and-shell-issues.md  2026-05-24-day-11-task-11.0-live-data-recon.md  2026-05-25-day-11-parallel-worktree-execution.md  2026-05-25-day-11-pr-convention-refinement.md  2026-05-26-vm-migration-bringup.md
docs/runbook/: day10_slo.md  day11_edge_api.md  day11_prep.md  day1_infra.md  day2_producers.md  day3_pyflink.md  day4_silver_fix.md  day4_silver_to_gold.md  day5_airflow.md  day5_dbt.md  day6_cdc.md  day7_deploy.md  day8_chill_open.md  vm-migration-mvp.md
docs/runbook/phase-1b-prep/: 00-overview.md  01-domain-and-dns.md  02-cloudflare-account-and-api-token.md  03-cloudflare-pages-monorepo.md  04-cloudflare-tunnel.md  05-oracle-cloud-vm.md  06-secrets-and-vapid.md
docs/superpowers/plans/: 2026-05-24-day-11-task-11.1a-backend.md  2026-05-26-vm-migration-mvp.md  phase-1a-week-1.md  phase-1a-week-2.md  phase-1b-week-3.md
docs/superpowers/specs/: 2026-04-30-seoul-citydata-platform-phase1-design.md  (+3 more)
docs/topics/: user-events-v1-schema.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChillOpenMarker.tsx  CongestionMap.tsx
frontend/lib/: api-client.ts  chill-open-client.ts  cookie-anon.ts  event-validator.ts  events-client.ts  hotspots-client.ts
frontend/public/: README.md  seoul-districts.geojson
infra/cloudflare/: README.md  tunnel-config.example.yml
infra/debezium/: connector-places.json  register.sh
infra/flink/: download_jars.sh
infra/http-receiver/: Dockerfile  app.py  requirements.txt
infra/kafka/: create_topics.sh
infra/lakekeeper/: bootstrap.py
infra/minio/: README.md
infra/postgres/: seed_places.sql
infra/systemd/: install-units.sh  seoulnow-api.service  seoulnow-bronze-silver.service  seoulnow-hotspot-producer.service  seoulnow-silver-gold.service
infra/vm/: deploy.sh
scripts/: duckdb_check.py  healthcheck.sh  load_static_places.py  memory_watch.sh  migrate_gold_add_kafka_ts.py  run_api.sh
spark/jobs/: backfill_silver_partition.py
src/api/: deps.py  lib_chill.py  main.py
src/flink_jobs/: bronze_to_silver.py  cdc_to_dim_place.py  silver_to_gold.py  slo_metrics.py
src/platform_common/: __init__.py  config.py  kafka.py
src/producers/: hotspot_producer.py  schemas.py  subway_producer.py
tests/: conftest.py
tests/fixtures/: seoul_hotspot_sample.json  seoul_subway_sample.json
tests/integration/: test_api_concurrency.py  test_api_hotspots.py  test_http_receiver.py
tests/unit/: test_chill_open_query.py  test_hotspot_producer.py  test_iceberg_sink_import.py  test_scd2.py  test_slo_metrics.py  test_subway_producer.py  test_user_events_schema.py
web/: next.config.mjs  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChillList.tsx  HotspotMap.tsx
(+36 files in other folders)
