[project]
name = "seoul-citydata-platform"
version = "0.1.0"
description = "Seoul realtime citydata platform — Phase 1A"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "confluent-kafka>=2.5",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "duckdb>=1.1",
    "pyiceberg[duckdb,s3fs]>=0.7",
]

[project.optional-dependencies]
# flink: PyFlink 1.20 의 transitive dep apache-beam 2.48 setup.py 가 pkg_resources +
# bdist_wheel 을 사용하는데, setuptools 70+ 는 pkg_resources 를 deprecate 처리하므로
# build 단계에서 main venv 의 setuptools<70 + wheel 로 우회한다.
# (자세한 사유 — commit 54f4399 + tool.uv.no-build-isolation-package 설정 참고.)
flink = [
    "apache-flink==1.20.0",
    "setuptools>=65,<70",
    "wheel>=0.41",
]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]
# dbt: PyFlink 1.20 transitive apache-beam 2.48 의 protobuf 범위
# (protobuf<4.24) 와 dbt-core>=1.9 의 protobuf 요구가 dev+flink 동시 sync 시
# 충돌 → 별도 extra 로 분리. local 에선 `uv sync --extra dbt`, CI 의 dbt job
# 도 `--extra dbt` 만. 본 프로젝트의 dbt = batch / flink = streaming 영역
# 분리 원칙 (spec §5-8 3계층) 과 정합.
dbt = [
    "dbt-core>=1.9",
    "dbt-duckdb>=1.9",
]

[tool.uv]
package = true
no-build-isolation-package = ["apache-beam"]
# flink (apache-beam 2.48) 와 dbt (dbt-core 1.9+) 의 protobuf 버전 범위가
# 양립 불가 → conflicts 명시. lock / sync 시 두 extra 를 한 환경에서 묶지 않음.
# local 에선 streaming 작업 = `--extra flink`, dbt 작업 = `--extra dbt` 로
# 분리. CI 도 job 별 분리.
conflicts = [
    [
        { extra = "flink" },
        { extra = "dbt" },
    ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/platform_common", "src/producers", "src/flink_jobs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
